# cs267-project

./: .gitignore  CMakeLists.txt  README.md  benchmark-direct.cpp  direct.cpp  dws-blocked.c  dws-blocked.cpp  dws-blockedshear.c  dws-direct.c  dws-direct.cpp  dws-gpu.c  dws-gpu.cu  dws-microkernel.c  dws-microkernel.cpp  dws-omp.c  dws-omp.cpp  dws-single-blocked.c  dws-single.c  dws-single.cpp  job.in  test.py
cpu/: CMakeLists.txt  benchmark-cpu.cpp  dws-blocked.cpp  dws-direct.cpp  dws-omp.cpp  dws-simd.cpp  dws-single-blocked.cpp  dws-single.cpp  dws-unroll.cpp  job.in  sweep-cpu.cpp
gpu/: CMakeLists.txt  benchmark-gpu.cpp  benchmark-gpu.cu  dws-gpu-blocked.cu  dws-gpu.cu  dws-gpu.h
lp_blocking/: lp_chen.py  lp_dinh.py
tests/: test.py
torch/: build.py  dws.cpp  dws.py  dws_gpu.cu  dws_gpu_handler.cpp  setup.py  setup_gpu.py  test.py  test_convnext_dws.py  test_convnext_regular.py  test_mobilenet_dws.py  test_mobilenet_regular.py
torch/src/: dws-torch.c  dws-torch.h
